--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest --detectOpenHandles --verbose",
+    "test:watch": "jest --watch --verbose",
+    "test:coverage": "jest --detectOpenHandles --verbose --coverage",
+    "test:force": "jest --detectOpenHandles --verbose --forceExit"
   },
   "dependencies": {
+    "cloudinary": "^2.6.1",
+    "mongoose": "^8.16.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -17,14 +23,24 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "husky": "^9.1.7",
+    "jest": "^30.0.1",
+    "jest-environment-jsdom": "^30.0.0",
     "lint-staged": "^16.1.2",
+    "supertest": "^7.1.1",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
