--- a/.github/workflows/next.yaml
+++ b/.github/workflows/next.yaml
@@ -17,7 +17,7 @@ jobs:
     name: Node ${{ matrix.node-version }}
 
     env:
-      MONGODB_URI: ${{ secrets.MONGODB_URI_DEV }}
+      MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/teavou' }}
 
     steps:
       - uses: actions/checkout@v3
