--- a/.github/workflows/next.yaml
+++ b/.github/workflows/next.yaml
@@ -17,7 +17,7 @@ jobs:
     name: Node ${{ matrix.node-version }}
 
     env:
-      MONGODB_URI: ${{ secrets.NEXT_API_MONGODB_URI }}
+      NEXT_API_MONGODB_URI: ${{ secrets.NEXT_API_MONGODB_URI }}
 
     steps:
       - uses: actions/checkout@v3
