--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "test:force": "jest --detectOpenHandles --verbose --forceExit"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.1",
     "mongoose": "^8.16.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,6 +28,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
