--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:force": "jest --detectOpenHandles --verbose --forceExit"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "mongoose": "^8.16.0",
     "next": "15.3.3",
