--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
+    "cookie": "^1.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "next": "15.3.3",
     "react": "^19.0.0",
@@ -30,6 +32,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
