--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "cloudinary": "^2.6.1",
     "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.523.0",
     "mongoose": "^8.16.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.0.43",
     "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
