--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
+    "sweetalert2": "^11.22.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
