--- a/.github/workflows/next.yaml
+++ b/.github/workflows/next.yaml
@@ -18,6 +18,7 @@ jobs:
 
     env:
       NEXT_API_MONGODB_URI: ${{ secrets.NEXT_API_MONGODB_URI }}
+      NEXT_PUBLIC_BASE_URL: ${{ secrets.NEXT_PUBLIC_BASE_URL }}
 
     steps:
       - uses: actions/checkout@v3
