--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.1",
     "cookie": "^1.0.2",
+    "framer-motion": "^12.23.0",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.523.0",
